# oak2-mod-manager

./: Reward management (1).txt  bl4-groundwork-glossary.epub  changelog.md  manager_pyproject.toml  oak2-mod-db-bl4-research-discord-convos.txt
CEDumper-449/: Readme_zh-TW.MD  build.cmd
CEDumper-449/dll/src/: ProxyVersion.def
CEDumper-449/docs/: export-formats.md  lessons-learned.md  ufunction-invoker-roadmap.md
CEDumper-449/scripts/: UE5CEDumper.CT  ue5_dissect.lua  ue5_invoke.lua
CEDumper-449/ui/UE5DumpUI.Tests/: CsxExportServiceTests.cs  DumpServiceTests.cs  InvokeScriptTests.cs
CEDumper-449/ui/UE5DumpUI/Core/: IDumpService.cs  IPlatformService.cs
CEDumper-449/ui/UE5DumpUI/Models/: AddressLookupResult.cs  AobUsageRecord.cs  FindInstancesResult.cs  LiveFieldValue.cs
CEDumper-449/ui/UE5DumpUI/Services/: AobUsageService.cs  CeXmlExportService.cs  CsxExportService.cs  DumpService.cs  InvokeScriptGenerator.cs  WindowsPlatformService.cs
CEDumper-449/ui/UE5DumpUI/Views/: GameClassFilterPanel.axaml.cs  LiveWalkerPanel.axaml.cs  MainWindow.axaml
docs/: appendix-a-sdk-layouts.md  book.toml  glossary.md
sdk_mods_unpacked/: BL4_TeleportPresets (1).json  BonkUtilities.sdkmod  GroundLootHelpers.sdkmod
sdk_mods_unpacked/BetterWorldBossDomes/: __init__.py  pyproject.toml
sdk_mods_unpacked/BonkUtilities/: __init__.py  commands.py  pyproject.toml
sdk_mods_unpacked/FallingMenus/: __init__.py  pyproject.toml
sdk_mods_unpacked/GroundLootHelpers/: __init__.py  pyproject.toml
sdk_mods_unpacked/TimeAndWeatherControls/: __init__.py  pyproject.toml
sdk_mods_unpacked/dump_ping/: __init__.py  pyproject.toml
sdk_mods_unpacked/obj_dump/: __init__.py  pyproject.toml
src/keybinds/: __init__.py  keybinds.cpp
wip inject - not working - but connects - alt/: BL4_RECEIVE_ITEMS_UI_PLAN.md  README.md  bl4_app.py  bl4_service.py  gengine_override.txt  local_receive_items.py
wip inject - not working - but connects - alt/NHA-lua-scripts for research/: B85.lua  Borderlands4.lua  NHA CT script main.txt  NHA_CE.lua  NHA_UE.lua  OakGameLiveEditor.lua
wip inject - not working - but connects - alt/Pull Mods from here and Put in Bonk/: BL4.filters  BL4.sln  BL4.vcxproj  DLLMain.cpp  README.md  pch.h
wip inject - not working - but connects - alt/Pull Mods from here and Put in Bonk/Core/Config/: ConfigManager.cpp  ConfigManager.h
wip inject - not working - but connects - alt/Pull Mods from here and Put in Bonk/Core/Framework/: Scheduler.cpp  Scheduler.h  Utils.cpp  Utils.h  Variables.cpp  Variables.h
wip inject - not working - but connects - alt/Pull Mods from here and Put in Bonk/Core/Hooks/: D3D12Hook.cpp  D3D12Hook.h  EngineHooks.cpp  EngineHooks.h  Init.cpp  ProcessEventHook.cpp  (+3 more)
wip inject - not working - but connects - alt/dump/: 3.yaml  profile.yaml
wip inject - not working - but connects - alt/static/: receive-items.css  receive-items.html  receive-items.js
(+50 files in other folders)
