[project]
name = "BetterWorldBossDomes"
version = "1"
authors = [{ name = "Yeti" }]
description = "Doubles the size of world boss domes. Also stops the boss from despawning if you leave on accident."

[tool.sdkmod]
name = "Better World Boss Domes"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/BetterWorldBossDomes/BetterWorldBossDomes.sdkmod"
version = "1"
coop_support = "HostOnly"