[project]
name = "FallingMenus"
version = "1"
authors = [{ name = "Yeti" }]
description = "Open your status menu while falling/gliding. You must set up the hotkey, I'd suggest your normal status menu key."

[tool.sdkmod]
name = "Falling Menus"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/FallingMenus/FallingMenus.sdkmod"
version = "1"