[project]
name = "TimeAndWeatherControls"
version = "1"
authors = [{ name = "Yeti" }]
description = "Control the time and weather. Right now, setting the weather changes it everywhere. You can change it again when you enter a different region if you want or save quit to reset that regions weather."

[tool.sdkmod]
name = "Time and Weather Controls"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/TimeAndWeatherControls/TimeAndWeatherControls.sdkmod"
version = "1"
coop_support = "HostOnly"